--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ amazon:
   access_key_id: <%= ENV['AMAZON_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AMAZON_SECRET_ACCESS_KEY'] %>
   region: eu-west-3
-  bucket: hostelkite #Mets ici le nom de ton bucket. Par exemple : prisme
+  bucket: hostelkite
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
